# quickbmp

./: CMakeLists.txt  README.md  main.cpp  quickbmp.cpp  quickbmp.h
