# CMakeList.txt : CMake project for quickpng, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("quickbmp")

# Add source to this project's executable.
add_executable (quickbmp "main.cpp" "quickbmp.cpp" )

# TODO: Add tests and install targets if needed.
